--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;900&family=Roboto:wght@300;700;900&display=swap" rel="stylesheet">
   <title>Test Task</title>
 </head>
 <body>
+  <header class="page-header">
+    <nav class="page-nav container">
+      <a href="#home" class="page-nav__logo"><img src="./img/header/logo.png" alt="Tajam company" width="128" height="50"></a>
+      <ul class="page-nav__list">
+        <li class="page-nav__item page-nav__item--active"><a href="#home">Home</a></li>
+        <li class="page-nav__item"><a href="#about">About</a></li>
+        <li class="page-nav__item"><a href="#expertise">Expertise</a></li>
+        <li class="page-nav__item"><a href="#teams">Teams</a></li>
+        <li class="page-nav__item"><a href="#works">Works</a></li>
+        <li class="page-nav__item"><a href="#reviews">People say</a></li>
+        <li class="page-nav__item"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
 
+    <section class="promo container" id="home">
+      <h2 class="promo__title">We Are Awesome Creative Agency</h2>
+      <p class="promo__slogan">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
+
+      <a href="#" class="btn promo__link">Learn more</a>
+
+      <ul class="dots">
+        <li class="dots__item dots__item--active"></li>
+        <li class="dots__item"></li>
+        <li class="dots__item"></li>
+        <li class="dots__item"></li>
+      </ul>
+    </section>
+  </header>
 </body>
 </html>
