Implemented landing page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li class="page-nav__item"><a href="#team">Teams</a></li>
         <li class="page-nav__item"><a href="#works">Works</a></li>
         <li class="page-nav__item"><a href="#reviews">People say</a></li>
-        <li class="page-nav__item"><a href="#contact">Contact</a></li>
+        <li class="page-nav__item"><a href="#contacts">Contact</a></li>
       </ul>
     </nav>
 
@@ -117,6 +117,130 @@
         <a href="#" class="btn team__link">We are hiring</a>
       </div>
     </section>
+
+    <section class="works" id="works">
+      <div class="container">
+        <h2 class="works__title title">Our works</h2>
+        <a href="" class="works__link">See all Projects in dribbble</a>
+      </div>
+      <ul class="works__list">
+        <li class="works__item"></li>
+        <li class="works__item"></li>
+        <li class="works__item"></li>
+        <li class="works__item"></li>
+        <li class="works__item"></li>
+        <li class="works__item"></li>
+        <li class="works__item"></li>
+        <li class="works__item"></li>
+        <li class="works__item"></li>
+        <li class="works__item"></li>
+        <li class="works__item"></li>
+        <li class="works__item"></li>
+      </ul>
+      <a href="#" class="works__load-more btn">Load more</a>
+    </section>
+
+    <section class="reviews" id="reviews">
+      <div class="container">
+        <article>
+          <p class="reviews__review">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit.</p>
+
+          <h4 class="reviews__author">Jane Galadriel</h4>
+          <p class="reviews__author-post">CEO Tengkurep</p>
+        </article>
+
+        <ul class="reviews__list">
+          <li class="reviews__item"><button class="reviews__item-btn"></button></li>
+          <li class="reviews__item"><button class="reviews__item-btn"></button></li>
+          <li class="reviews__item reviews__item--active"><button class="reviews__item-btn"></button></li>
+          <li class="reviews__item"><button class="reviews__item-btn"></button></li>
+          <li class="reviews__item"><button class="reviews__item-btn"></button></li>
+        </ul>
+      </div>
+    </section>
+
+    <section class="contacts" id="contacts">
+      <div class="container">
+        <div class="feedback">
+          <form method="POST" class="feedback__form">
+            <h2 class="feedback__title title">Give us a good news</h2>
+            <input type="text" name="name" id="name" placeholder="Name" />
+            <input type="email" name="email" id="email" placeholder="Email" />
+            <input type="text" name="subject" id="subject" placeholder="Subject" />
+            <textarea name="message" id="message" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <button type="submit" class="btn feedback__submit">Submit</button>
+          </form>
+        </div>
+        <div class="clients">
+          <h2 class="clients__title title">Our happy clients</h2>
+          <ul class="clients__list">
+            <li class="clients__item"><img src="./img/clients/zara-logo.png" alt="Zara" width="162" height="22"></li>
+            <li class="clients__item"><img src="./img/clients/mango-logo.png" alt="Mango" width="138" height="22"></li>
+            <li class="clients__item"><img src="./img/clients/barneys-logo.png" alt="Barneys" width="154" height="41"></li>
+            <li class="clients__item"><img src="./img/clients/gucci-logo.png" alt="Gucci" width="140" height="21"></li>
+            <li class="clients__item"><img src="./img/clients/calvin-logo.png" alt="Calvin Clein" width="151" height="24"></li>
+            <li class="clients__item"><img src="./img/clients/nike-logo.png" alt="Nike" width="95" height="34"></li>
+            <li class="clients__item"><img src="./img/clients/converse-logo.png" alt="Converse" width="113" height="69"></li>
+            <li class="clients__item"><img src="./img/clients/puma-logo.png" alt="Puma" width="114" height="56"></li>
+            <li class="clients__item"><img src="./img/clients/levis-logo.png" alt="Levis" width="109" height="53"></li>
+            <li class="clients__item"><img src="./img/clients/billabong-logo.png" alt="Billabong" width="130" height="70"></li>
+          </ul>
+        </div>
+      </div>
+    </section>
   </main>
+
+  <footer class="page-footer">
+    <div class="container">
+
+      <div class="row">
+        <section class="company-info">
+          <img src="./img/footer/logo.png" alt="Tajam company" width="128" height="50">
+          <p>lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit</p>
+        </section>
+
+        <section class="studio">
+          <h4 class="studio__title">Our studio</h4>
+          <ul class="studio__list">
+            <li class="studio__item studio__item--location">
+              <span>Ruko cucruk, Jl. Radio luar dalem jos No.12 - 13, Kalideres - Jakarta Barat
+              11480 - Indonesia</span>
+            </li>
+            <li class="studio__item studio__item--phone"><a href="tel:+622122243333">(+62) 21-2224 3333</a></li>
+          </ul>
+        </section>
+
+        <section class="stay">
+          <h4 class="stay__title">Stay in touch</h4>
+          <form class="stay__form">
+            <input type="email" name="subscribe-email" id="subscribe-email" placeholder="Subscribe our newsletter" />
+            <button type="submit">Submit</button>
+          </form>
+
+          <ul class="social-links">
+            <li class="social-link social-link--fb"><a href="#">Facebook</a></li>
+            <li class="social-link social-link--tw"><a href="#">Twitter</a></li>
+            <li class="social-link social-link--dr"><a href="#">Dribbble</a></li>
+            <li class="social-link social-link--in"><a href="#">Instagram</a></li>
+            <li class="social-link social-link--gl"><a href="#">Google+</a></li>
+            <li class="social-link social-link--yt"><a href="#">Youtube</a></li>
+          </ul>
+        </section>
+      </div>
+
+      <div class="row">
+        <section class="page-info">
+          <ul class="page-info__list">
+            <li class="page-info__item"><a href="#">Help</a></li>
+            <li class="page-info__item"><a href="#">Terms & conditions</a></li>
+            <li class="page-info__item"><a href="#">Privacy</a></li>
+          </ul>
+        </section>
+
+        <section class="copyright"><span>Copyright © 2015 - Tajem Creative</span></section>
+      </div>
+
+    </div>
+  </footer>
 </body>
 </html>
