--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@
         </div>
       </div>
     </section>
+
+    <section class="chart container">
+      <h2 class="title chart__title">Statistics</h2>
+      <div class="chart__content">
+      </div>
+    </section>
   </main>
 
   <footer class="page-footer">
@@ -242,5 +248,7 @@
 
     </div>
   </footer>
+
+  <script src="./js/index.js"></script>
 </body>
 </html>
